--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -1,5 +1,6 @@
 //Itrade
 
+@import "itrade_variables";
 @import "left_panel";
 @import "top_panel";
 @import "wallet";
@@ -19,7 +20,6 @@
 @import "sign";
 @import "trader_bio";
 @import "trading";
-
 
 @font-face {
   font-family: "Avenir Next";
@@ -370,19 +370,16 @@ select, .it-pointer, svg {
   color: #282e3d
 }
 .it-container {
-  position: static;
   width: 100%;
-  min-width: 1030px;
-  max-width: 2088px;
+  height: 100%;
+  position: fixed;
   padding: 0;
   margin: 0 auto;
-  height: 100%;
-  min-height: 1024px;
   font-family: "Avenir Next" ,sans-serif !important;
   font-size: 14px;
   color: #1b1f2b;
   background-color: #eaebef;
-  overflow-x: hidden;
+  overflow-x: scroll;
   transition: filter 400ms;
 }
 .it-page {
@@ -392,6 +389,7 @@ select, .it-pointer, svg {
   height: calc(100% - 47px);
   width: calc(100% - 94px);
   min-width: 936px;
+  min-height: $content-min-height;
   border-top-left-radius: 5px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(0, 0, 0, .2);
@@ -399,7 +397,7 @@ select, .it-pointer, svg {
   border-bottom: 0;
   padding-left: 2em;
   padding-right: 2em;
-  position: fixed;
+  position: absolute;
   overflow-x: hidden;
   padding-bottom: 10px;
   &.load {
